Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>THE TITLE</head>
+<head>
+  <title>THIS IS THE TITLE</title>
+</head>
 <body>This is some body text</body>
 </html>
